# OOD

./: .gitignore
lw1/: .gitignore  CMakeLists.txt  IShape.h  Parser.h  Rectangle.h  Shape.h  ShapeCreator.h  Triangle.h  main.cpp
lw2/: CMakeLists.txt  Digit.h  LongInteger.h  main.cpp
lw2/LongInteger/: CMakeLists.txt  Digit.cpp  Digit.h  DigitExtensions.h  LongInteger.h
lw2/LongIntegerTest/: CMakeLists.txt
lw2/LongIntegerTest/cmake_modules/: CodeCoverage.cmake
lw2/LongIntegerTest/tests/: AssignmentTest.cpp  CMakeLists.txt  ConstructorTest.cpp  CreateFromStringTest.cpp  DivisionOperatorTest.cpp  EquivalenceOperatorTest.cpp  LessOperatorTest.cpp  MinusOperatorTest.cpp  MoreOperatorTest.cpp  MultiplicationOperatorTest.cpp  NotEquivalenceOperatorTest.cpp  PlusOperatorTest.cpp
lw3/: CMakeLists.txt  Circle.h  Rectangle.h  Triangle.h  main.cpp
lw3/Creator/: CircleCreator.h  RectangleCreator.h  TriangleCreator.h
lw4/: CMakeLists.txt  Circle.h  IShape.h  Point.h  Rectangle.h  Shape.h  Triangle.h
lw4/Creator/: CircleCreator.h
lw4/LongInteger/: LongInteger.h
lw5/: CMakeLists.txt  Circle.h  IShape.h  IVisitor.h  MathHelper.h  Point.h  Printer.h  Rectangle.h  Triangle.h  Visitor.h  main.cpp
lw5/Creator/: CircleCreator.h  RectangleCreator.h  ShapeCreator.h  TriangleCreator.h
lw5/LongInteger/: DigitExtensions.cpp  LongInteger.h
